tests/ui/traits/const-traits/mbe-bare-trait-objects-const-trait-bounds.stderr
error: expected identifier, found `]`
  --> $DIR/mbe-bare-trait-objects-const-trait-bounds.rs:20:16
   |
LL |     ($Type:ty) => {
   |      -------- while parsing argument for this `ty` macro fragment
...
LL | check! { [const] Trait }
   |                ^ expected identifier

error[E0658]: const trait impls are experimental
  --> $DIR/mbe-bare-trait-objects-const-trait-bounds.rs:20:11
   |
LL | check! { [const] Trait }
   |           ^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
